# compact-quick-settings-gnome-shell-extension

./: LICENSE  Makefile.am  README.md  autogen.sh  configure.ac  extension.js  metadata.json.in
